tests/baselines/reference/symbolProperty36.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty36.ts(3,5): error TS2300: Duplicate identifier '[Symbol.isConcatSpreadable]'.


==== tests/cases/conformance/es6/Symbols/symbolProperty36.ts (1 errors) ====
    var x = {
        [Symbol.isConcatSpreadable]: 0,
        [Symbol.isConcatSpreadable]: 1
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '[Symbol.isConcatSpreadable]'.
    }